--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,10 @@ jobs:
 
     - name: Run tests
       run: uv run pytest --cov-report=xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        name: py${{ matrix.python-version }}
+        fail_ci_if_error: false
