--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "beartype>=0.18.0",
-    "equinox>=0.11.0",
-    "jax>=0.9.0",
-    "jaxlib>=0.9.0",
-    "jaxtyping>=0.3.7",
+    "beartype",
+    "equinox",
+    "jax",
+    "jaxlib",
+    "jaxtyping",
     "numpy>=2",
-    "optimistix>=0.0.11",
+    "optimistix",
     "scipy>=1.16.0",
 ]
 
